<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintHorizontal_bias="0.0"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toTopOf="parent"
        map:layout_constraintVertical_bias="1.0"
        tools:context=".MapsActivity" />

    <EditText
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="182dp"
        android:ems="10"
        android:hint="@string/enter_your_location_data"
        android:inputType="textPersonName"
        map:layout_constraintBottom_toTopOf="@+id/map"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintHorizontal_bias="0.323"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toTopOf="parent"
        map:layout_constraintVertical_bias="1.0" />


    <TextView
        android:id="@+id/cityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="102dp"
        android:text="@string/city"
        android:textSize="20dp"
        map:layout_constraintBottom_toTopOf="@+id/map"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintHorizontal_bias="0.037"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toTopOf="parent"
        map:layout_constraintVertical_bias="0.792" />

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="102dp"
        android:text="@string/temperature"
        android:textSize="20dp"
        map:layout_constraintBottom_toTopOf="@+id/map"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintHorizontal_bias="0.436"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toTopOf="parent"
        map:layout_constraintVertical_bias="0.792" />

    <TextView
        android:id="@+id/tempHigh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="102dp"
        android:text="@string/high"
        android:textSize="20dp"
        map:layout_constraintBottom_toTopOf="@+id/map"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintHorizontal_bias="0.425"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toTopOf="parent"
        map:layout_constraintVertical_bias="0.965" />

    <TextView
        android:id="@+id/unittemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="102dp"
        android:text="@string/unit"
        android:textSize="20dp"
        map:layout_constraintBottom_toTopOf="@+id/map"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintHorizontal_bias="0.731"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toTopOf="parent"
        map:layout_constraintVertical_bias="0.792" />

    <TextView
        android:id="@+id/unittemp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="102dp"
        android:text="@string/unit2"
        android:textSize="20dp"
        map:layout_constraintBottom_toTopOf="@+id/map"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintHorizontal_bias="0.731"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toTopOf="parent"
        map:layout_constraintVertical_bias="0.965" />

    <TextView
        android:id="@+id/weatherState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="102dp"
        android:text="@string/weather_state"
        android:textSize="20dp"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintHorizontal_bias="0.049"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toTopOf="parent"
        map:layout_constraintVertical_bias="0.423" />

    <Button
        android:id="@+id/getCityID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="269dp"
        android:text="@string/set_city"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintHorizontal_bias="0.05"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toTopOf="parent"
        map:layout_constraintVertical_bias="0.074" />

    <Button
        android:id="@+id/weatherByID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="269dp"
        android:text="@string/get_weather"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintHorizontal_bias="0.699"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toTopOf="parent"
        map:layout_constraintVertical_bias="0.074" />


</androidx.constraintlayout.widget.ConstraintLayout>

